l10n: Updates to Russian (ru) translation
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/ru.po
+++ b/po/ru.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-01-14 15:27-0500\n"
-"PO-Revision-Date: 2011-02-14 15:19+1100\n"
+"PO-Revision-Date: 2011-02-15 13:45+1100\n"
 "Last-Translator: \n"
 "Language-Team: Russian\n"
 "MIME-Version: 1.0\n"
@@ -2263,9 +2263,8 @@ msgid "Connecting..."
 msgstr "Подключается"
 
 #: ../src/virtManager/manager.py:1062
-#, fuzzy
 msgid " (disabled)"
-msgstr "Отключено"
+msgstr " (отключено)"
 
 #: ../src/virtManager/manager.py:1073
 msgid "Disabled in preferences dialog."
@@ -4454,9 +4453,8 @@ msgid "_CPU Usage"
 msgstr "_Использование CPU"
 
 #: ../src/vmm-manager.glade.h:10
-#, fuzzy
 msgid "_Connection Details"
-msgstr "Выбор подключения"
+msgstr "_Свойства подключения"
 
 #: ../src/vmm-manager.glade.h:11 ../src/vmm-preferences.glade.h:30
 msgid "_Disk I/O"
@@ -4468,7 +4466,7 @@ msgstr "_Правка"
 
 #: ../src/vmm-manager.glade.h:14
 msgid "_Graph"
-msgstr "_Графики"
+msgstr "_Диаграмма"
 
 #: ../src/vmm-manager.glade.h:16 ../src/vmm-preferences.glade.h:34
 msgid "_Network I/O"
@@ -4564,9 +4562,8 @@ msgid "Hypervisor Select"
 msgstr "Выбор гипервизора"
 
 #: ../src/vmm-open-connection.glade.h:8
-#, fuzzy
 msgid "Me_thod:"
-msgstr "М_одель:"
+msgstr "_Тип:"
 
 #: ../src/vmm-open-connection.glade.h:9
 msgid ""
@@ -4584,9 +4581,8 @@ msgstr ""
 "QEMU/KVM"
 
 #: ../src/vmm-open-connection.glade.h:14
-#, fuzzy
 msgid "_Autoconnect:"
-msgstr "А_втоподключение:"
+msgstr "_Подключаться автоматически:"
 
 #: ../src/vmm-open-connection.glade.h:15
 msgid "_Hypervisor:"
@@ -4605,9 +4601,8 @@ msgid "<b>General</b>"
 msgstr "<b>Общие</b>"
 
 #: ../src/vmm-preferences.glade.h:4
-#, fuzzy
 msgid "<b>Graphical Consoles</b>"
-msgstr "Графическая консоль %s"
+msgstr "<b>Графические консоли</b>"
 
 #: ../src/vmm-preferences.glade.h:5
 msgid "<b>New VM</b>"
@@ -4623,7 +4618,7 @@ msgstr "Автоматически _открывать консоль:"
 
 #: ../src/vmm-preferences.glade.h:8
 msgid "Change..."
-msgstr ""
+msgstr "Изменить..."
 
 #: ../src/vmm-preferences.glade.h:9
 msgid "Device re_moval:"
@@ -4639,7 +4634,7 @@ msgstr "Обратная связь"
 
 #: ../src/vmm-preferences.glade.h:12
 msgid "Force console keyboard shortcuts:"
-msgstr ""
+msgstr "Использовать комбинации клавиш консоли:"
 
 #: ../src/vmm-preferences.glade.h:13
 msgid ""
@@ -4653,7 +4648,7 @@ msgstr "Общие"
 
 #: ../src/vmm-preferences.glade.h:15
 msgid "Grab keys:"
-msgstr ""
+msgstr "Клавиши переключения:"
 
 #: ../src/vmm-preferences.glade.h:16
 msgid "Graphical console _scaling:"
@@ -4661,7 +4656,7 @@ msgstr "Масштабировать графическую _консоль:"
 
 #: ../src/vmm-preferences.glade.h:17
 msgid "Install Audio Device:"
-msgstr "Установка аудио устройства:"
+msgstr "Установка аудиоустройства:"
 
 #: ../src/vmm-preferences.glade.h:18
 msgid "Maintain h_istory of"
@@ -4689,12 +4684,11 @@ msgstr ""
 
 #: ../src/vmm-preferences.glade.h:25
 msgid "Not supported"
-msgstr ""
+msgstr "Не поддерживается"
 
 #: ../src/vmm-preferences.glade.h:26
-#, fuzzy
 msgid "Poweroff/_Reboot/Save:"
-msgstr "_Выключить/Перезагрузить:"
+msgstr "В_ыключить, перезагрузить, сохранить:"
 
 #: ../src/vmm-preferences.glade.h:27
 msgid "Preferences"
