Update repo links and crufty docs

--- a/INSTALL
+++ b/INSTALL
@@ -20,7 +20,7 @@ To build an RPM, you can run:
 virt-manager generally requires the latest upstream version of
 python-virtinst, which checked out with
 
-hg clone http://hg.fedorahosted.org/hg/python-virtinst
+git clone git://git.fedorahosted.org/git/python-virtinst.git
 
 If you want to replace your system installed virt-manager version,
 add --prefix=/usr to ./configure. Please see the INSTALL.autotools file
