--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
     Virt Manager TODO list
     ----------------------
 
-Please see http://virt-manager.et.redhat.com/page/Roadmap
+Please see http://virt-manager.org/page/Roadmap
