Small tweak for contribute instructions

--- a/README
+++ b/README
@@ -74,12 +74,12 @@ Patches should be submitted either as unified diffs:
 Alternatively use git and submit a diff against the main source repository:
 
    git clone git://git.fedorahosted.org/git/virt-manager.git
-   cd virt-manager--devel
+   cd virt-manager
    ... make your changes ...
    git commit -a -m "Some changelog message"
    git show > my_feature.patch
 
-Then mail the 'myfeature.patch' file to the virt-tools-list@redhat.com list,
+Then mail the 'my_feature.patch' file to the virt-tools-list@redhat.com list,
 with [PATCH] and a brief description in the subject.
 
 Using git format-patch and/or git send-email is also fine.
