--- a/po/fr.po
+++ b/po/fr.po
@@ -16,10 +16,10 @@ msgstr ""
 "PO-Revision-Date: 2011-02-17 22:24+0100\n"
 "Last-Translator: Laurent Léonard <laurent@open-minds.org>\n"
 "Language-Team: French <trans-fr@lists.fedoraproject.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "X-Generator: Lokalize 1.1\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
@@ -156,8 +156,8 @@ msgstr ""
 #: ../src/virt-manager.schemas.in.h:28
 msgid "Show the cpu usage field in the domain list summary view"
 msgstr ""
-"Montrer le champ « utilisation CPU » dans l'affichage de synthèse de la liste "
-"des domaines"
+"Montrer le champ « utilisation CPU » dans l'affichage de synthèse de la "
+"liste des domaines"
 
 #: ../src/virt-manager.schemas.in.h:29
 msgid "Show the disk I/O field in the domain list summary view"
@@ -177,7 +177,8 @@ msgstr "La longueur de la liste d'URL"
 
 #: ../src/virt-manager.schemas.in.h:32
 msgid "The number of samples to keep in the statistics history"
-msgstr "Le nombre d'échantillons à conserver dans l'historique des statistiques"
+msgstr ""
+"Le nombre d'échantillons à conserver dans l'historique des statistiques"
 
 #: ../src/virt-manager.schemas.in.h:33
 msgid ""
@@ -238,7 +239,8 @@ msgstr "S'il faut ou non installer un périphérique de son pour les MV locales"
 
 #: ../src/virt-manager.schemas.in.h:44
 msgid "Whether to install a sound device for remote VMs or not"
-msgstr "S'il faut ou non installer un périphérique de son pour les MV distantes"
+msgstr ""
+"S'il faut ou non installer un périphérique de son pour les MV distantes"
 
 #: ../src/virt-manager.schemas.in.h:45
 msgid ""
@@ -246,8 +248,8 @@ msgid ""
 "a new guest, 2 = On creation of any guest"
 msgstr ""
 "S'il faut présenter une console pour un invité. « 0 » = jamais, « 1 » = "
-"seulement lors de la création d'un nouvel invité, « 2 » = lors de la création "
-"de n'importe quel invité"
+"seulement lors de la création d'un nouvel invité, « 2 » = lors de la "
+"création de n'importe quel invité"
 
 #: ../src/virt-manager.schemas.in.h:46
 msgid "Whether to show VM button toolbar in Details display"
@@ -289,7 +291,8 @@ msgstr "Si une confirmation est requise afin d'éteindre/redémarrer une MV"
 
 #: ../src/virt-manager.schemas.in.h:53
 msgid "Whether we require confirmation to remove a virtual device"
-msgstr "Si une confirmation est requise afin de retirer un périphérique virtuel"
+msgstr ""
+"Si une confirmation est requise afin de retirer un périphérique virtuel"
 
 #: ../src/virt-manager.schemas.in.h:54
 msgid ""
@@ -626,7 +629,8 @@ msgstr " et le stockage sélectionné (cela peut prendre un moment)"
 #: ../src/virtManager/clone.py:757
 #, python-format
 msgid "Error creating virtual machine clone '%s': %s"
-msgstr "Erreur lors de la création du clone « %s » de la machine virtuelle : %s"
+msgstr ""
+"Erreur lors de la création du clone « %s » de la machine virtuelle : %s"
 
 #: ../src/virtManager/clone.py:808
 msgid "No storage to clone."
@@ -804,7 +808,8 @@ msgid "Guest has crashed"
 msgstr "L'invité a planté"
 
 #: ../src/virtManager/console.py:819
-msgid "Error: viewer connection to hypervisor host got refused or disconnected!"
+msgid ""
+"Error: viewer connection to hypervisor host got refused or disconnected!"
 msgstr ""
 "Erreur : la connexion de l'afficheur graphique à l'hôte hyperviseur a été "
 "refusée ou interrompue !"
@@ -1476,7 +1481,8 @@ msgstr "Console série non disponible pour un invité inactif."
 #: ../src/virtManager/details.py:811
 #, python-format
 msgid "Console for device type '%s' not yet supported."
-msgstr "Console pour le type de périphérique « %s » pas encore prise en charge."
+msgstr ""
+"Console pour le type de périphérique « %s » pas encore prise en charge."
 
 #: ../src/virtManager/details.py:814
 #, python-format
@@ -1728,7 +1734,8 @@ msgstr "Plantée"
 
 #: ../src/virtManager/domain.py:1046
 msgid "Cannot start guest while cloning operation in progress"
-msgstr "Ne peut démarrer un invité lorsqu'une opération de clonage est en cours"
+msgstr ""
+"Ne peut démarrer un invité lorsqu'une opération de clonage est en cours"
 
 #: ../src/virtManager/domain.py:1060
 msgid "Cannot resume guest while cloning operation in progress"
@@ -2085,8 +2092,8 @@ msgstr "Erreur lors du démarrage de la réserve « %s » : %s"
 #, python-format
 msgid "Are you sure you want to permanently delete the pool %s?"
 msgstr ""
-"Êtes-vous certain de vouloir supprimer de manière irréversible la réserve %"
-"s ?"
+"Êtes-vous certain de vouloir supprimer de manière irréversible la réserve "
+"%s ?"
 
 #: ../src/virtManager/host.py:628
 #, python-format
@@ -2162,8 +2169,8 @@ msgstr "Erreur lors du démarrage de l'interface « %s » : %s"
 #, python-format
 msgid "Are you sure you want to permanently delete the interface %s?"
 msgstr ""
-"Êtes-vous certain de vouloir supprimer de manière irréversible l'interface %"
-"s ?"
+"Êtes-vous certain de vouloir supprimer de manière irréversible l'interface "
+"%s ?"
 
 #: ../src/virtManager/host.py:946
 #, python-format
@@ -2430,8 +2437,8 @@ msgid ""
 "To confirm your selection please click OK button\n"
 "while you have desired keys pressed."
 msgstr ""
-"Vous pouvez maintenant définir les touches d'appropriation en appuyant dessus."
-"\n"
+"Vous pouvez maintenant définir les touches d'appropriation en appuyant "
+"dessus.\n"
 "Pour confirmer votre sélection, cliquez sur le bouton « Valider »\n"
 "lorsque vous aurez appuyé sur les touches désirées."
 
@@ -2567,8 +2574,8 @@ msgstr "Aucun périphérique présent"
 #, python-format
 msgid "The emulator may not have search permissions for the path '%s'."
 msgstr ""
-"L'émulateur peut ne pas avoir les permissions de recherche pour le chemin « %"
-"s »."
+"L'émulateur peut ne pas avoir les permissions de recherche pour le chemin « "
+"%s »."
 
 #: ../src/virtManager/uihelpers.py:754
 msgid "Do you want to correct this now?"
@@ -2625,8 +2632,7 @@ msgid ""
 "small>"
 msgstr ""
 "<small><b>Conseil :</b> le serveur VNC ou SPICE est fortement recommandé car "
-"il "
-"permet à l'affichage virtuel d'être intégrée à cette application. Il peut "
+"il permet à l'affichage virtuel d'être intégrée à cette application. Il peut "
 "également être utilisé pour donner accès à l'affichage virtuel depuis un "
 "système distant.</small>"
 
@@ -2692,8 +2698,7 @@ msgid ""
 "your virtual storage device."
 msgstr ""
 "Veuillez spécifier la manière dont vous souhaitez allouer l'espace sur ce "
-"système hôte pour "
-"votre périphérique de stockage virtuel."
+"système hôte pour votre périphérique de stockage virtuel."
 
 #: ../src/vmm-add-hardware.glade.h:19
 msgid "Please indicate how you would like to view the virtual display."
@@ -3360,7 +3365,8 @@ msgstr "S'il faut <b>réacheminer</b> le trafic vers le réseau physique"
 
 #: ../src/vmm-create-net.glade.h:49
 msgid "You will need to choose an IPv4 address space for the virtual network:"
-msgstr "Vous devrez choisir un espace d'adressage IPv4 pour le réseau virtuel :"
+msgstr ""
+"Vous devrez choisir un espace d'adressage IPv4 pour le réseau virtuel :"
 
 #: ../src/vmm-create-net.glade.h:50
 msgid "_Destination:"
@@ -3764,9 +3770,9 @@ msgid ""
 "<b>Tip:</b> 'source' refers to information seen from the host OS, while "
 "'target' refers to information seen from the guest OS"
 msgstr ""
-"<b>Conseil :</b> « source » fait référence à l'information vue par le système "
-"d'exploitation hôte alors que « cible » fait référence au nom du périphérique "
-"vu par le système d'exploitation invité"
+"<b>Conseil :</b> « source » fait référence à l'information vue par le "
+"système d'exploitation hôte alors que « cible » fait référence au nom du "
+"périphérique vu par le système d'exploitation invité"
 
 #: ../src/vmm-details.glade.h:19
 msgid ""
@@ -4684,8 +4690,7 @@ msgid ""
 "may overwrite keyboard interaction with the guest."
 msgstr ""
 "Force les accélérateurs du menu de la console lorsque celle-ci est active. "
-"Activer ceci "
-"peut remplacer l'interaction du clavier avec l'invité."
+"Activer ceci peut remplacer l'interaction du clavier avec l'invité."
 
 #: ../src/vmm-preferences.glade.h:14
 msgid "General"
