details: Allow editting virtualport settings for 'direct' nic
The following patch adds support for VSI types so the respective values
can be viewed and edited via virt-manager

Signed-off-by: Gerhard Stenzel <gerhard.stenzel@de.ibm.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -68,6 +68,7 @@ Further patches have been submitted by:
   Matthias Fulz <olz1983-at-googlemail-dot-com>
   Niels de Vos <ndevos-at-redhat-dot-com>
   Wen Congyang <wency-at-cn-dot-fujitsu-dot-com>
+  Gerhard Stenzel <gerhard-dot-stenzel-at-de-dot-ibm-dot-com>
 
   <...send a patch & get your name here...>
 
