Prep for release

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,16 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.8.7 (March 24, 2011)
+------------------------------
+- Allow renaming an offline VM
+- Spice password support (Marc-André Lureau)
+- Allow editting NIC <virtualport> settings (Gerhard Stenzel)
+- Allow enabling/disabling individual CPU features
+- Allow easily changing graphics type between VNC and SPICE for existing
+  VM
+- Allow easily changing network source device for existing VM
+
 Release 0.8.6 (Jan 14, 2011)
 ----------------------------
 - SPICE support (requires spice-gtk) (Marc-André Lureau)
