--- a/AUTHORS
+++ b/AUTHORS
@@ -69,6 +69,7 @@ Further patches have been submitted by:
   Niels de Vos <ndevos-at-redhat-dot-com>
   Wen Congyang <wency-at-cn-dot-fujitsu-dot-com>
   Gerhard Stenzel <gerhard-dot-stenzel-at-de-dot-ibm-dot-com>
+  Yuri Chornoivan <yurchor-at-ukr-dot-net>
 
   <...send a patch & get your name here...>
 
