de.po: Tweak a translation (thanks Julian G)

--- a/po/de.po
+++ b/po/de.po
@@ -3499,9 +3499,7 @@ msgstr "<span color='#484848'>Betriebssystem:</span>"
 
 #: ../src/vmm-create.glade.h:7
 msgid "<span size='large' color='white'>Create a new virtual machine</span>"
-msgstr ""
-"<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Neues "
-"virtuelles Netzwerk erstellen</span>"
+msgstr "<span size='large' color='white'>Neue virtuelle Maschine erstellen</span>"
 
 #: ../src/vmm-create.glade.h:8
 msgid "A_utomatically detect operating system based on install media"
