HACKING: Mention pep8 dep

--- a/HACKING
+++ b/HACKING
@@ -10,4 +10,5 @@ a fairly recent version of glade-3: if a small UI change seems to rewrite the
 entire glade file, you likely have a too old (or too new :) glade version.
 
 Before submitting any patches, please run 'make check-pylint' to check for
-basic syntax errors/warnings. This command requires the pylint package.
+basic syntax errors/warnings. This command requires the pylint and python-pep8
+packages to be installed.
