po: Fix a spanish translation issue

--- a/po/es.po
+++ b/po/es.po
@@ -1745,7 +1745,7 @@ msgstr "Apagando"
 
 #: ../src/virtManager/domain.py:922
 msgid "Shutoff"
-msgstr "Callar"
+msgstr "Apagado"
 
 #: ../src/virtManager/domain.py:924
 msgid "Crashed"
