Prep for release

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,18 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.9.0 (July 26, 2011)
+-----------------------------
+- Use a hiding toolbar for fullscreen mode
+- Use libguestfs to show guest packagelist and more (Richard W.M. Jones)
+- Basic 'New VM' wizard support for LXC guests
+- Remote serial console access (with latest libvirt)
+- Remote URL guest installs (with latest libvirt)
+- Add Hardware: Support <filesystem> devices
+- Add Hardware: Support <smartcard> devices (Marc-André Lureau)
+- Enable direct interface selection for qemu/kvm (Gerhard Stenzel)
+- Allow viewing and changing disk serial number
+
 Release 0.8.7 (March 24, 2011)
 ------------------------------
 - Allow renaming an offline VM
