Add Miklos to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -70,6 +70,7 @@ Further patches have been submitted by:
   Wen Congyang <wency-at-cn-dot-fujitsu-dot-com>
   Gerhard Stenzel <gerhard-dot-stenzel-at-de-dot-ibm-dot-com>
   Yuri Chornoivan <yurchor-at-ukr-dot-net>
+  Miklos Vajna <vmiklos-at-frugalware-dot-org>
 
   <...send a patch & get your name here...>
 
