inspection: exclude cdrom from vm inspection
Can cause inspection to fail if cdrom is the first device
See: https://bugzilla.redhat.com/show_bug.cgi?id=752552

(crobinso: added Lars to AUTHORS, expanded commit msg)

--- a/AUTHORS
+++ b/AUTHORS
@@ -71,6 +71,7 @@ Further patches have been submitted by:
   Gerhard Stenzel <gerhard-dot-stenzel-at-de-dot-ibm-dot-com>
   Yuri Chornoivan <yurchor-at-ukr-dot-net>
   Miklos Vajna <vmiklos-at-frugalware-dot-org>
+  Lars Sjostrom <lars-at-radicore-dot-se>
 
   <...send a patch & get your name here...>
 
