Add Jim to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -72,6 +72,7 @@ Further patches have been submitted by:
   Yuri Chornoivan <yurchor-at-ukr-dot-net>
   Miklos Vajna <vmiklos-at-frugalware-dot-org>
   Lars Sjostrom <lars-at-radicore-dot-se>
+  Jim Fehlig <jfehlig-at-suse-dot-com>
 
   <...send a patch & get your name here...>
 
