--- a/AUTHORS
+++ b/AUTHORS
@@ -1,15 +1,17 @@
  Virtual Machine Manager Authors
  ===============================
 
-Virtual Machine Manager code is developed by:
+Virtual Machine Manager is primarily developed and maintained by:
+
+    Cole Robinson <crobinso-at-redhat-dot-com>
+
+Previous developers and maintainers:
 
     Daniel Berrange <berrange-at-redhat-dot-com>
     Hugh O. Brock <hbrock-at-redhat-dot-com>
     Jeremy Katz <katzj-at-redhat-dot-com>
-    Cole Robinson <crobinso-at-redhat-dot-com>
 
-The user interaction / interface design and artwork is
-done by:
+User interaction, interface design and artwork has been provided by:
 
     Máirín Duffy <duffy-at-redhat-dot-com>
     Jeremy Perry <jeperry-at-redhat-dot-com>
