virt-manager: Fix Mode hotkey problem in FS page
Mode label in FS page should be associated with the
fs-mode-combo, but its erronesouly is associated with
fs-type-combo, fixing that here.

Signed-off-by: Deepak C Shetty <deepakcs@linux.vnet.ibm.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -75,6 +75,7 @@ Further patches have been submitted by:
     Miklos Vajna <vmiklos-at-frugalware-dot-org>
     Lars Sjostrom <lars-at-radicore-dot-se>
     Jim Fehlig <jfehlig-at-suse-dot-com>
+    Deepak C Shetty <deepakcs-at-linux-dot-vnet-dot-ibm-dot-com>
 
     <...send a patch & get your name here...>
 
