createnet: Allow networks smaller than 16 addresses

--- a/AUTHORS
+++ b/AUTHORS
@@ -76,6 +76,7 @@ Further patches have been submitted by:
     Lars Sjostrom <lars-at-radicore-dot-se>
     Jim Fehlig <jfehlig-at-suse-dot-com>
     Deepak C Shetty <deepakcs-at-linux-dot-vnet-dot-ibm-dot-com>
+    Brian J. Murrell <brian-at-interlinx-dot-bc-dot-ca>
 
     <...send a patch & get your name here...>
 
