Prep for release

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.9.1 (January 31, 2012)
+--------------------------------
+- Support for adding usb redirection devices (Marc-André Lureau)
+- Option to switch usb controller to support usb2.0 (Marc-André Lureau)
+- Option to specify machine type for non-x86 guests (Li Zhang)
+- Support for filesystem device type and write policy (Deepak C Shetty)
+- Many bug fixes!
+
 Release 0.9.0 (July 26, 2011)
 -----------------------------
 - Use a hiding toolbar for fullscreen mode
