Add Tuomas to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -77,6 +77,7 @@ Further patches have been submitted by:
     Jim Fehlig <jfehlig-at-suse-dot-com>
     Deepak C Shetty <deepakcs-at-linux-dot-vnet-dot-ibm-dot-com>
     Brian J. Murrell <brian-at-interlinx-dot-bc-dot-ca>
+    Tuomas Jormola <tj-at-solitudo-dot-net>
 
     <...send a patch & get your name here...>
 
