console: fix logic in need_tunnel for non-local connections.
(crobinso: drop code reformatting, add Nathan to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -78,6 +78,7 @@ Further patches have been submitted by:
     Deepak C Shetty <deepakcs-at-linux-dot-vnet-dot-ibm-dot-com>
     Brian J. Murrell <brian-at-interlinx-dot-bc-dot-ca>
     Tuomas Jormola <tj-at-solitudo-dot-net>
+    Nathan Bird <nathan-at-acceleration-dot-net>
 
     <...send a patch & get your name here...>
 
