match usb device with vendorID, productID, bus, device
(crobinso: add Guannan to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -79,6 +79,7 @@ Further patches have been submitted by:
     Brian J. Murrell <brian-at-interlinx-dot-bc-dot-ca>
     Tuomas Jormola <tj-at-solitudo-dot-net>
     Nathan Bird <nathan-at-acceleration-dot-net>
+    Guannan Ren <gren-at-redhat-dot-com>
 
     <...send a patch & get your name here...>
 
