AddHardware: Fix checking if a widget is sensitive
Signed-off-by: Eduardo Elias Ferreira <edusf@linux.vnet.ibm.com>

(crobinso: Added Eduardo to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -80,6 +80,7 @@ Further patches have been submitted by:
     Tuomas Jormola <tj-at-solitudo-dot-net>
     Nathan Bird <nathan-at-acceleration-dot-net>
     Guannan Ren <gren-at-redhat-dot-com>
+    Eduardo Elias Ferreira <edusf-at-linux-dot-vnet-dot-ibm-dot-com>
 
     <...send a patch & get your name here...>
 
