Prep for release 0.9.2

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.9.2 (July 09, 2012)
+-----------------------------
+- Convert to gtkbuilder: UI can now be editted with modern glade tool
+- virt-manager no longer runs on RHEL5, but can manage a remote RHEL5
+  host
+- Option to configure spapr net and disk devices for pseries (Li Zhang)
+- Many bug fixes and improvements
+
 Release 0.9.1 (January 31, 2012)
 --------------------------------
 - Support for adding usb redirection devices (Marc-André Lureau)
