--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.9.3 (July 09, 2012)
+-----------------------------
+- Fix broken release tar.gz of version 0.9.2
+
 Release 0.9.2 (July 09, 2012)
 -----------------------------
 - Convert to gtkbuilder: UI can now be editted with modern glade tool
